@@ -3,11 +3,12 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>網路電台</title>
+        <link rel="stylesheet" type="text/css" href="player.css"/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
         <script type="text/javascript" src="player.js"></script>
     </head>
     <body>
-        <div id='panel' style='position:fixed;text-align:center;'>
+        <div id='panel'>
             <fieldset>
                 <legend>網路電台</legend>
                 <input id='control' type='button' value='撥放'/>
