@@ -3,6 +3,9 @@
 	* utils/player.js: Fix the compatible problem with IE8.
 	* utils/player.js: Refactor for max compatibility.
 	* utils/player.html: Adjust UI.
+	* utils/player.css,
+	utils/player.html,
+	utils/player.js: Adjust UI.
 
 2010-01-05  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
